[package]
name = "rust_snake"
version = "0.1.0"
authors = ["gabrielcfvg <56398419+gabrielcfvg@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.3"

[dependencies.sdl2]
version = "0.34.2"
default-features = false
features = ["image", "unsafe_textures", "ttf"]